--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "author": "Visvesh & Surendar",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^3.6.0",
@@ -31,17 +35,14 @@
     "formidable": "^1.2.2",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.0",
+    "messagebird": "^3.5.0",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.1.6",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.4.10",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "morgan": "^1.9.1",
     "nodemon": "^1.17.5"
   },
   "devDependencies": {}
