--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Visvesh & Surendar",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.831.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
@@ -43,7 +44,8 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.4.10",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "request": "^2.88.2"
   },
   "devDependencies": {}
 }
